k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bme-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bme-frontend
  template:
    metadata:
      labels:
        app: bme-frontend
    spec:
      containers:
        - name: bme-frontend
          image: jagannathrk/bme-frontend-df
