k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bme-orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bme-orders
  template:
    metadata:
      labels:
        app: bme-orders
    spec:
      containers:
        - name: bme-orders
          image: jagannathrk/bme-orders-deployment
