k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bme-tickets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bme-tickets
  template:
    metadata:
      labels:
        app: bme-tickets
    spec:
      containers:
        - name: bme-tickets
          image: jagannathrk/bookmyevent-tickets-dockerfile
