k8s/frontend-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: bme-frontend-svc
spec:
  selector:
    app: bme-frontend
  ports:
    - name: bme-frontend
      protocol: TCP
      port: 3000
      targetPort: 3000
