k8s/orders-mongo-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: bme-orders-svc
spec:
  selector:
    app: bme-orders
  ports:
    - name: bme-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
