k8s/tickets-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: bme-tickets-svc
spec:
  selector:
    app: bme-tickets
  ports:
    - name: bme-tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
