k8s/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: bookmyevent.com
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-svc
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: bme-tickets-svc
              servicePort: 3000  
          - path: /api/orders/?(.*)
            backend:
              serviceName: bme-orders-svc
              servicePort: 3000                  
          - path: /?(.*)
            backend:
              serviceName: bme-frontend-svc
              servicePort: 3000
